# azure-iot-preview

./: .gitignore  .gitmodules  NOTICE.txt  README.md
.github/workflows/: ci_cortex_m4.yml  ci_cortex_m7.yml
azure_iot/: CMakeLists.txt  nx_azure_iot.c  nx_azure_iot.h  nx_azure_iot_hub_client.c  nx_azure_iot_hub_client.h  nx_azure_iot_provisioning_client.c  nx_azure_iot_provisioning_client.h
azure_iot/azure_iot_security_module/: CMakeLists.txt  nx_azure_iot_security_module.c  nx_azure_iot_security_module.h
azure_iot/azure_iot_security_module/inc/: asc_port.h  asc_version.h
azure_iot/azure_iot_security_module/inc/iot_security_module/model/objects/: object_network_activity_ext.h
azure_iot/azure_iot_security_module/iot-security-module-core/: CMakeLists.txt
azure_iot/azure_iot_security_module/iot-security-module-core/inc/asc_security_core/: collectors_headers.h  collectors_info.h  configuration.h  core.h  logger.h  version.h
azure_iot/azure_iot_security_module/iot-security-module-core/inc/asc_security_core/model/objects/: objects.h
azure_iot/azure_iot_security_module/iot-security-module-core/src/: collector_collection_internal.c  collectors_info.c  core.c  logger.c
azure_iot/azure_iot_security_module/iot-security-module-core/src/serializer/: network_activity.c
azure_iot/azure_iot_security_module/iot-security-module-core/src/serializer/extensions/: custom_emitter.c
azure_iot/azure_iot_security_module/src/collectors/: collector_network_activity.c
azure_iot/azure_iot_security_module/src/model/objects/: object_network_activity_ext.c
azure_iot/azure_iot_security_module/src/utils/: iuuid.c
docs/: azure_rtos_iot_sdk_api.md
nx_cloud/: nx_cloud.c  nx_cloud.h
samples/: CMakeLists.txt  rebuild.ps1
samples/app/: main.c  nx_azure_iot_cert.c  nx_azure_iot_ciphersuites.c  sample_azure_iot_embedded_sdk.c  sample_config.h
samples/cmake/: linux.cmake  win32.cmake
samples/ports/cortex_m4/gnu/: CMakeLists.txt  GENERIC_CORTEX_M4.ld
samples/ports/cortex_m7/gnu/: CMakeLists.txt  GENERIC_CORTEX_M7.ld
samples/sample_azure_iot_embedded_sdk/: CMakeLists.txt  README.md  main.c  nx_azure_iot_cert.c  sample_azure_iot_embedded_sdk.c  sample_config.h  sample_device_identity.c
samples/sample_azure_iot_embedded_sdk_pnp/: CMakeLists.txt  nx_user.h  sample_azure_iot_embedded_sdk_pnp.c
samples/sample_pnp_temperature_controller/: CMakeLists.txt  main.c  nx_azure_iot_pnp_helpers.c  nx_azure_iot_pnp_helpers.h  sample_config.h  sample_device_identity.c  sample_pnp_deviceinfo_component.c  sample_pnp_temperature_controller.c  sample_pnp_thermostat_component.c  sample_pnp_thermostat_component.h
